apps/full-stack/iam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: full-stack
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
