apps/full-stack/iam/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
  namespace: full-stack
spec:
  to:
    kind: Service
    name: keycloak-service
  port:
    targetPort: http
  tls:
    termination: edge  # El router de OpenShift se encarga del HTTPS
    insecureEdgeTerminationPolicy: Redirect
